# aws-batch-demo

./: .editorconfig  .gitignore  Dockerfile  README.md  package.json  tsconfig.json
.github/workflows/: ci.yaml
demoapp/: webapp.py
demoapp/templates/: index.html
infrastructure/: .eslintrc.yml  README.md  cdk.json  jest.config.js  package.json  tsconfig.json
infrastructure/src/: batch.ts  events-lambda.ts  stack.ts  test.ts  vpc.ts  webapp.ts
infrastructure/test/: main.test.ts
infrastructure/test/__snapshots__/: main.test.ts.snap
python-demoapp/: Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg
python-demoapp/demoapp/: compute.py  lambda.py  webapp.py
python-demoapp/demoapp/templates/: index.html
src/: batch.ts  main.ts  stack.ts  vpc.ts  webapp.ts
