[metadata]
name = demoapp
version = 1.0

[options]
zip_safe = False
include_package_data = True
packages = demoapp
install_requires =
    flask
    click
    boto3

[options.package_data]
demoapp = templates/*, static/*

[options.entry_points]
console_scripts =
    demoapp-compute=demoapp.compute:main
